Task4_IstioServiceMesh/task4b_authorizationpolicy/meshauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls: 
    mode: STRICT
