Task4_IstioServiceMesh/task4b_authorizationpolicy/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istiogateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "istiogateway.127.0.0.1.sslip.io"
      # - "*"
